# CMakeList.txt : CMake project for leetcode, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.10)

# Enable Hot Reload for MSVC compilers if supported.
if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

project ("leetcode")

include_directories(
        ${PROJECT_SOURCE_DIR}/include
        ${PROJECT_SOURCE_DIR}/test_data
        ${PROJECT_SOURCE_DIR}/tools)

# Add source to this project's executable.
add_executable (leetcode 
"main.cpp"
"src/list_node_helpers.cpp"
"src/1_two_sum.cpp"
"src/2_add_two_numbers.cpp"
"src/3_longest_substring_without_repeating_characters.cpp"
"src/4_median_of_two_sorted_arrays.cpp"
"src/5_longest_palindromic_substring.cpp"
"src/6_zigzag_conversion.cpp"
"src/9_palindrome_number.cpp"
"src/11_container_with_most_water.cpp"
"src/12_integer_to_roman.cpp"
"src/13_roman_to_integer.cpp"
"src/14_longest_common_prefix.cpp"
"src/15_3sum.cpp"
"src/17_letter_combinations_of_a_phone_number.cpp"
"src/18_4sum.cpp"
"src/19_remove_nth_node_from_end_of_list.cpp"
"src/20_valid_parentheses.cpp"
"src/21_merge_two_sorted_lists.cpp"
"src/23_merge_k_sorted_lists.cpp"
"src/25_reverse_nodes_in_k_group.cpp"
"src/26_remove_duplicates_from_sorted_array.cpp"
"src/27_remove_element.cpp"
"src/28_find_the_index_of_the_first_occurrence_in_a_string.cpp"
"src/30_substring_with_concatenation_of_all_words.cpp"
"src/33_search_in_rotated_sorted_array.cpp"
"src/34_find_first_and_last_position_of_element_in_sorted_array.cpp"
"src/35_search_insert_position.cpp"
"src/36_valid_sudoku.cpp"
"src/42_trapping_rain_water.cpp"
"src/45_jump_game_II.cpp"
"src/48_rotate_image.cpp"
"src/49_group_anagrams.cpp"
"src/50_pow_x_n_times.cpp"
"src/53_maximum_subarray.cpp"
"src/54_spiral_matrix.cpp"
"src/55_jump_game.cpp"
"src/56_merge_intervals.cpp"
"src/57_insert_interval.cpp"
"src/58_length_of_last_word.cpp"
"src/61_rotate_list.cpp"
"src/62_unique_paths.cpp"
"src/63_unique_paths_ii.cpp"
"src/64_minimum_path_sum.cpp"
"src/66_plus_one.cpp"
"src/67_add_binary.cpp"
"src/68_text_justification.cpp"
"src/69_sqrt_x.cpp"
"src/70_climbing_stairs.cpp"
"src/71_simplify_path.cpp"
"src/72_edit_distance.cpp"
"src/73_set_matrix_zeroes.cpp"
"src/74_search_2D_matrix.cpp"
"src/76_minimum_window_substring.cpp"
"src/77_combinations.cpp"
"src/80_remove_duplicates_from_sorted_array_II.cpp"
"src/81_search_in_rotated_sorted_arrayII.cpp"
"src/82_remove_duplicates_from_sorted_list_II.cpp"
"src/86_partition_list.cpp"
"src/88_merge_sorted_array.cpp"
"src/92_reverse_linked_list_II.cpp"
"src/97_interleaving_string.cpp"
"src/98_validate_binary_search_tree.cpp"
"src/100_same_tree.cpp"
"src/101_symmetric_tree.cpp"
"src/102_binary_tree_level_order_traversal.cpp"
"src/103_binary_tree_zigzag_level_order_traversal.cpp"
"src/104_maximum_depth_of_binary_tree.cpp"
"src/105_construct_binary_tree_from_preorder_and_inorder_traversal.cpp"
"src/106_construct_binary_tree_from_inorder_and_postorder_traversal.cpp"
"src/108_convert_sorted_array_to_binary_search_tree.cpp"
"src/110_balanced_binary_tree.cpp"
"src/112_path_sum.cpp"
"src/114_flatten_binary_tree_to_linked_list.cpp"
"src/117_populating_next_right_pointers_in_each_node_II.cpp"
"src/120_triangle.cpp"
"src/121_best_time_to_buy_and_sell_stock.cpp"
"src/122_best_time_to_buy_and_sell_stock_II.cpp"
"src/123_best_time_to_buy_and_sell_stock_III.cpp"
"src/188_best_time_to_buy_and_sell_stock_IV.cpp"
"src/124_binary_tree_maximum_path_sum.cpp"
"src/125_valid_palindrome.cpp"
"src/128_longest_consecutive_sequence.cpp"
"src/129_sum_root_to_leaf_numbers.cpp"
"src/134_gas_station.cpp"
"src/135_candy.cpp"
"src/136_single_number.cpp"
"src/137_single_number_II.cpp"
"src/138_copy_list_with_random_pointer.cpp"
"src/139_word_break.cpp"
"src/141_linked_list_cycle.cpp"
"src/146_LRU_cache.cpp"
"src/148_sort_list.cpp"
"src/149_max_points_on_a_line.cpp"
"src/150_evaluate_reverse_polish_notation.cpp"
"src/151_reverse_words_in_a_string.cpp"
"src/153_find_minimum_in_rotated_sorted_array.cpp"
"src/155_min_stack.cpp"
"src/162_find_peak_element.cpp"
"src/167_two_sumII_input_array_is_sorted.cpp"
"src/169_majority_element.cpp"
"src/172_factorial_trailing_zeroes.cpp"
"src/173_binary_search_tree_iterator.cpp"
"src/189_rotate_array.cpp"
"src/190_reverse_bits.cpp"
"src/191_number_of_1_bits.cpp"
"src/198_house_robber.cpp"
"src/199_binary_tree_right_side_view.cpp"
"src/200_number_of_islands.cpp"
"src/201_bitwise_AND_of_numbers_range.cpp"
"src/202_happy_number.cpp"
"src/205_isomorphic_strings.cpp"
"src/206_reverse_linked_list.cpp"
"src/209_minimum_size_subarray_sum.cpp"
"src/215_Kth_largest_element_in_an_array.cpp"
"src/219_contains_duplicate_II.cpp"
"src/230_kth_smallest_element_in_a_bst.cpp"
"src/221_maximal_square.cpp"
"src/222_count_complete_tree_nodes.cpp"
"src/224_basic_calculator.cpp"
"src/226_invert_binary_tree.cpp"
"src/228_summary_ranges.cpp"
"src/236_lowest_common_ancestor_of_a_binary_tree.cpp"
"src/238_product_of_array_except_self.cpp"
"src/239_sliding_window_maximum.cpp"
"src/242_valid_anagram.cpp"
"src/274_h_index.cpp"
"src/289_game_of_life.cpp"
"src/290_word_pattern.cpp"
"src/295_find_median_from_data_stream.cpp"
"src/300_longest_increasing_subsequence.cpp"
"src/301_remove_invalid_parentheses.cpp"
"src/309_best_time_to_buy_and_sell_stock_with_cooldown.cpp"
"src/322_coin_change.cpp"
"src/347_top_k_frequent_elements.cpp"
"src/349_intersection_of_two_arrays.cpp"
"src/373_find_k_pairs_with_smallest_sums.cpp"
"src/374_guess_number_higher_or_lower.cpp"
"src/380_insert_delete_get_random_O_1.cpp"
"src/383_ransom_note.cpp"
"src/392_is_subsequence.cpp"
"src/412_fizz_buzz.cpp"
"src/424_longest_repeating_character_replacement.cpp"
"src/427_construct_quad_tree.cpp"
"src/438_find_all_anagrams_in_a_string.cpp"
"src/452_minimum_number_of_arrows_to_burst_balloons.cpp"
"src/480_sliding_window_median.cpp"
"src/502_ipo.cpp"
"src/530_minimum_absolute_difference_in_bst.cpp"
"src/653_two_sum_IV_input_is_a_BST.cpp"
"src/637_average_of_levels_in_binary_tree.cpp"
"src/692_top_k_frequent_words.cpp"
"src/704_binary_search.cpp"
"src/714_best_time_to_buy_and_sell_stock_with_transaction_fee.cpp"
"src/763_partition_labels.cpp"
"src/918_maximum_sum_circular_subarray.cpp"
"src/1114_print_in_order.cpp"
"src/1115_print_foobar_alternately.cpp"
"src/1116_print_zero_even_odd.cpp"
"src/1117_building_H2O.cpp"
"src/1195_fizz_buzz_multithreaded.cpp"
"src/1226_the_dining_philosophers.cpp"
"src/1279_traffic_light_controlled_intersection.cpp"
"src/3531_count_covered_buildings.cpp")

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET leetcode PROPERTY CXX_STANDARD 20)
endif()

option(USE_O_N_136 "Set ON to enable O(N) version in 136_single_number task or OFF to O(NLogN)" ON)
if (USE_O_N_136)
  target_compile_definitions(${PROJECT_NAME} PRIVATE O_N_136)
endif()

option(PRINT_ENABLED "Enable printing" OFF)
add_compile_definitions(PRINT_ENABLED=${PRINT_ENABLED})